apps/bazarr/overlays/nishir-tailnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  annotations:
    tailscale.com/tags: tag:web
spec:
  defaultBackend:
    service:
      name: bazarr
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - bazarr
