apps/bazarr/overlays/nishir-tailnet/patch-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bazarr
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale-system
      ports:
        - port: http
          protocol: TCP
